train/templates/kafkaserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafkaserver
  namespace: train
  labels:
    app: kafkaserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafkaserver
  template:
    metadata:
      labels:
        app: kafkaserver
    spec:
      containers:
        - name: kafka
          image: docker.io/apache/kafka:4.1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9092
              protocol: TCP
            - containerPort: 9093
              protocol: TCP
          volumeMounts:
            - name: kafka-config
              mountPath: /opt/kafka/config
            - name: kafka-data
              mountPath: /opt/kafka/data
            - name: kafka-logs
              mountPath: /opt/kafka/logs
            - name: tmp
              mountPath: /tmp
      volumes:
        - name: kafka-config
          emptyDir: {}
        - name: kafka-data
          emptyDir: {}
        - name: kafka-logs
          emptyDir: {}
        - name: tmp
          emptyDir: {}
