train/templates/monitoring-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monitoring-app
  namespace: train
  labels:
    app: monitoring-app
    app.kubernetes.io/name: monitoring-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: monitoring-app
  template:
    metadata:
      labels:
        app: monitoring-app
    spec:
      containers:
        - name: monitoring-app
          image: quay.io/mouachan/train-monitoring-app-arm64:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
          resources:
            limits:
              cpu: "1"
              memory: 512Mi
