train/templates/service-kafkaserver.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafkaserver
  namespace: train
spec:
  selector:
    app: kafkaserver
  ports:
    - name: plaintext
      port: 9092
      targetPort: 9092
      protocol: TCP
    - name: controller
      port: 9093
      targetPort: 9093
      protocol: TCP
  type: ClusterIP
