train/templates/service-monitoring-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: monitoring-app
  namespace: train
  labels:
    app: monitoring-app
    app.kubernetes.io/name: monitoring-app
    app.kubernetes.io/part-of: monitoring-app
spec:
  selector:
    app: monitoring-app
    deployment: monitoring-app
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
    - name: https
      port: 8443
      targetPort: 8443
      protocol: TCP
  type: ClusterIP
